--- a/log_24012022.Rmd
+++ b/log_24012022.Rmd
@@ -2,7 +2,9 @@
 title: "Alpha diversity crAssphage"
 author: "Luigui Gallardo Becerra"
 date: "1/24/2022"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 ---
 
 ```{r setup, include=FALSE}
