--- a/03_boxplots/boxplots_host.rmd
+++ b/03_boxplots/boxplots_host.rmd
@@ -25,29 +25,39 @@ table <- read.table(file = "table_16s_crasslike.txt",
 
 knitr::kable(table)
 
+p_value <- list(c("NW", "O"),
+                c("O", "OMC"),
+                c("NW", "OMC"))
+
 table <- melt(table,
               id.vars=c("sample", "group"))
+
 
 # boxplot
 theme_set(theme_bw())
 boxplot <- ggplot(data = table,
                   aes(y = value,
-                      x = variable,
+                      x = group,
                       color = group)) +
   geom_boxplot(aes(color = group)) +
   geom_point(aes(color = group),
              size = 1,
              shape = 21,
              position = position_jitterdodge()) +
+  facet_grid(. ~ variable) +
+  stat_compare_means(comparisons = p_value,
+                     method = "wilcox.test") +
   labs(x="", 
        y="Relative abundance", 
        title="Host crassphage") +
-  theme(axis.text.x = element_text(angle = 90,
+  theme(legend.position = "none",
+        axis.text.x = element_text(angle = 90,
                                    hjust = 1,
                                    vjust = 0.5,
                                    size = 6),
         plot.title = element_text(face = "bold",
-                                  hjust = 0.5))
+                                  hjust = 0.5),
+        strip.text.x = element_text(size = 6))
 
 boxplot
 
@@ -57,22 +67,28 @@ table$value=log(table$value)
 # boxplot
 boxplot_log10 <- ggplot(data = table,
                   aes(y = value,
-                      x = variable,
+                      x = group,
                       color = group)) +
   geom_boxplot(aes(color = group)) +
   geom_point(aes(color = group),
              size = 1,
              shape = 21,
              position = position_jitterdodge()) +
+  facet_grid(. ~ variable) +
+  stat_compare_means(comparisons = p_value,
+                     method = "wilcox.test") +
   labs(x="", 
        y="Relative abundance (log10)", 
        title="Host crassphage (log10)") +
-  theme(axis.text.x = element_text(angle = 90,
+  theme(legend.position = "none",
+        axis.text.x = element_text(angle = 90,
                                    hjust = 1,
                                    vjust = 0.5,
                                    size = 6),
         plot.title = element_text(face = "bold",
-                                  hjust = 0.5))
+                                  hjust = 0.5),
+        strip.text.x = element_text(size = 6))
+  
 
 boxplot_log10
 
