--- a/03_boxplots/boxplots_host.rmd
+++ b/03_boxplots/boxplots_host.rmd
@@ -13,6 +13,9 @@ library("reshape")
 require("gridExtra")
 library("ggpubr")
 library("ggh4x")
+library("dplyr")
+library("rstatix")
+
 ```
 
 # Boxplots
